fixed about section mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ h4 {
     letter-spacing: .4rem;
     text-transform: uppercase;
     margin-bottom: 0px;
+    padding: 0px!important;
 }
 .dark { color: white; }
 .light { color: var(--accent-dark-turq); }
@@ -139,7 +140,7 @@ p {
 
 .section-intro h3 {
     font-weight: 400;
-    font-size: 0.6rem;
+    font-size: 0.8rem;
     line-height: 1.875;
     margin-bottom: 0.3rem;
     letter-spacing: .2rem;
@@ -246,10 +247,10 @@ li {
 /*----------------------------- About Section -----------------------------*/
 #about {
     background-color: #1C1C1C;
-    padding-top: 90px;
-    padding-bottom: 50px;
+    padding-top: 80px;
+    padding-bottom: 90px;
     margin: 0px;
-    min-height: 100vh;
+    min-height: 868px;
 }
 img#profile-img {
     position: relative;
@@ -275,8 +276,10 @@ img#profile-img {
 #about #about-me {
     align-items: normal;
 }
-.pt-5#profile-left, .pt-5#profile-right {
-    padding-top: 3vh!important;
+#profile-left, #profile-right {
+    padding-top: 4vh!important;
+    padding-left: 48px;
+    padding-right: 48px;
 }
 .about-content {
     max-width: 850px;
@@ -292,7 +295,7 @@ img#profile-img {
     text-align: left;
     position: relative;
 }
-.profile-skills-content p#sub-p {
+.profile-skills-content p#sub-p, .profile-skills-content p#sub-p-first {
     font-family: var(--body-font-family);
     color: grey;
     font-size: 11px;
@@ -301,21 +304,32 @@ img#profile-img {
     padding: 20px 0px 0px 0px; /* top right bottom left */
     margin-bottom: 0px;
 }
-.profile-skills-content p.tab {
-    padding: 0px 0px 5px 1.5em; /* top right bottom left */
-    color: rgb(193, 193, 193)!important;
-}
-.profile-skills-content p#sub-p + p, p#sub-p ~ p.tab, p.tab ~ p {
+.profile-skills-content p#sub-p + p, .profile-skills-content p#sub-p-first + p {
     font-family: var(--body-font-family);
     color: rgb(219, 219, 219);
     font-size: 14px;
     font-weight: normal;
     letter-spacing: .15rem;
     margin-bottom: 0px;
+    padding-left: 0px;
 }
-.profile-skills-content p#sub-p ~ p.tab {
-    tab-size: 4;
+.skills-col {
+    margin-top: 10px;
+    margin-bottom: 5px;
+    padding: 0px;
 }
+.skills-col p {
+    font-family: var(--body-font-family);
+    color: rgb(219, 219, 219);
+    font-size: 14px;
+    font-weight: normal;
+    letter-spacing: .15rem;
+    line-height: 30px;
+    margin-bottom: 0px;
+}
+/* .row.profile-skills-content.justify-content-center {
+    margin: 0px!important;
+} */
 
 /*----------------------------- Resume Section -----------------------------*/
 #resume {
@@ -503,16 +517,6 @@ div#hline {
         left: 50%;
         transform: translate(-50%, -50%);
     }
-    /* h1 {
-        font-size: xx-large;
-        font-size: calc(10px + 3.5vw);
-    } */
-    .px-5#profile-left {
-        padding-left: 10%;
-    }
-    .px-5#profile-right {
-        padding-right: 10%;
-    }
 
     /*------------- About -------------*/
     img#profile-img {
@@ -538,6 +542,20 @@ div#hline {
         line-height: 1.875;
         letter-spacing: .15rem;
     }
+    .skills-col {
+        margin-top: 10px;
+        margin-bottom: 5px;
+        padding: 0px;
+    }
+    .skills-col p {
+        font-family: var(--body-font-family);
+        color: rgb(219, 219, 219);
+        font-size: 14px;
+        font-weight: normal;
+        letter-spacing: .15rem;
+        line-height: 30px;
+        /* margin-bottom: 10px; */
+    }
     
     /*------------- Resume -------------*/
     #resume {
@@ -562,15 +580,52 @@ div#hline {
     }
 }
 
+/* Screens small - 575 pixels */
 @media only screen and (max-width: 575px) {
     #profile p {
         text-align: center;
         margin: 1.2rem 0px 0px 0px; /* top right bottom left */
     }
+    #profile-left, #profile-right {
+        padding-top: 5vh!important;
+        padding-left: 70px;
+    }
+    .profile-skills-content p#sub-p-first {
+        padding: 10px 0px 0px 0px; /* top right bottom left */
+    }
 }
+@media only screen and (max-width: 400px) {
+    #profile-left, #profile-right {
+        padding-left: 50px;
+    }
+}
+
+/* Screens 576 --> large */
 @media only screen and (min-width: 576px) {
     .section-intro {
         text-align: left;
+    }
+    #profile-left, #profile-right {
+        padding-top: auto!important;
+        padding-right: 0px!important;
+        padding-left: 70px!important;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .skills-col {
+        margin-top: 10px;
+        margin-bottom: 5px;
+        padding: 0px;
+    }
+    .skills-col p {
+        font-family: var(--body-font-family);
+        color: rgb(219, 219, 219);
+        font-size: 14px;
+        font-weight: normal;
+        letter-spacing: .15rem;
+        line-height: 30px;
+        /* margin-bottom: 10px; */
     }
 }
 
